[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/CategoryButton.gd" type="Script" id=1]
[ext_resource path="res://assets/CategoryChannelOpen.png" type="Texture" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CategoryButton/Button:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.682353, 0.682353, 0.682353, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="CategoryButton" type="VBoxContainer"]
margin_right = 120.0
margin_bottom = 24.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
self_modulate = Color( 0.682353, 0.682353, 0.682353, 1 )
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_constants/hseparation = 10
text = "Placeholder"
icon = ExtResource( 2 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubButtonContainer" type="VBoxContainer" parent="."]
margin_top = 28.0
margin_right = 120.0
margin_bottom = 28.0
custom_constants/separation = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Highlight = SubResource( 5 )

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
